--- a/styles/header.css
+++ b/styles/header.css
@@ -9,22 +9,31 @@
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
   background-image: linear-gradient( #ffdaa0, #fff1da);
   z-index: 2;
-  height:150px;
+  height:100px;
+  align-items: center;
+
 }
 
 .navigation-box{
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px;
+  flex: 1;
+  column-gap: 35px;
+  margin-left: 15%;
+}
+
+.logo-image{
   display: flex;
-  flex-direction: row;
-  column-gap: 20px;
-  padding-left: 25%;
+  height:60px;
+  
 }
 
 .title-box {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  flex: 1;
 }
-
 
 
 .Home-box,
